Updated builtin docs

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -6,7 +6,37 @@
     <body>
         <h2>CSS-X-Fire</h2>
 
+        <h3>Requirements</h3>
         <div>This plugin requires Firefox with Firebug.</div>
-        <div>Download and install <a href="/files/cssxfire.xpi">cssxfire.xpi</a> to connect Firebug CSS editor with the IDE plugin.</div>
+
+        <h3>Get connected</h3>
+        <div>Download and install the corresponding browser plugin - <a href="/files/cssxfire.xpi">cssxfire.xpi</a> - to connect Firebug CSS editor with the IDE plugin.</div>
+
+        <h3>Using</h3>
+        <div>Use Firebug CSS editor to edit and add style properties.</div>
+        <div><img src="/files/css-x-fire-5.png" alt="Firebug CSS editor" /></div>
+        <div>&nbsp;</div>
+        <div>
+            The IDE toolwindow shows the changes made in Firebug in a tree view, categorized by file and CSS selector, provided that the<br/>
+            CSS selectors exist in the project opened. From here you can apply or discard changes on an entire file, selector or on a specific property.
+        </div>
+        <div><img src="/files/css-x-fire-2.png" alt="CSS property nodes" /></div>
+        <div>&nbsp;</div>
+        <div>
+            The property nodes - the tree leafs - will either be blue (modified), green (new) or gray (invalid). They are also navigatable, e.g.<br/>
+            right-click or press enter key on a valid property to show the corresponding source code.
+        </div>
+        <div><img src="/files/css-x-fire-4.png" alt="Jump-to-source" /></div>
+
+        <h3>About</h3>
+        <div>
+            Plugin home: <a href="http://plugins.intellij.net/plugin/?idea&id=5348">http://plugins.intellij.net/plugin/?idea&id=5348</a><br/>
+            Please use the above link to comment or rate this plugin, or for making a feature request. All feedback is greatly appreciated!
+        </div>
+        <div>&nbsp;</div>
+        <div>Project home: <a href="http://code.google.com/p/css-x-fire/">http://code.google.com/p/css-x-fire/</a></div>
+        <div>&nbsp;</div>
+        <div>This help page can be accessed by clicking the help button in CSS-X-Fire toolwindow.</div>
+        <div><img src="/files/css-x-fire-1.png" alt="help" /></div>
     </body>
 </html>
