Updated builtin docs

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -38,5 +38,7 @@
         <div>&nbsp;</div>
         <div>This help page can be accessed by clicking the help button in CSS-X-Fire toolwindow.</div>
         <div><img src="/files/css-x-fire-1.png" alt="help" /></div>
+        <div>&nbsp;</div>
+        <div>Style with pleasure!</div>
     </body>
 </html>
