Fixed error in help page

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -24,7 +24,7 @@
         <div>&nbsp;</div>
         <div>
             The property nodes - the tree leafs - will either be blue (modified), green (new) or gray (invalid). They are also navigatable, e.g.<br/>
-            right-click or press enter key on a valid property to show the corresponding source code.
+            double-click or press enter key on a valid property to show the corresponding source code.
         </div>
         <div><img src="/files/css-x-fire-4.png" alt="Jump-to-source" /></div>
 
