--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -11,6 +11,7 @@
 
         <h3>Get connected</h3>
         <div>Download and install the corresponding browser plugin - <a href="/files/cssxfire.xpi">cssxfire.xpi</a> (1.4) - to connect Firebug CSS editor with the IDE plugin.</div>
+        <div><a href="javascript:void((function(){var%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('src','http://localhost:6776/files/css-x-fire-bookmarklet.js');document.body.appendChild(e)})())">Firebug Lite</a> bookmarklet</div>
 
         <h3>Using</h3>
         <div>Use Firebug CSS editor to edit and add style properties.</div>
