--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -1,17 +1,18 @@
 <html>
     <head>
-        <title>CSS-X-Fire (1.4)</title>
+        <title>CSS-X-Fire (1.5)</title>
     </head>
 
     <body>
-        <h2>CSS-X-Fire (1.4)</h2>
+        <h2>CSS-X-Fire (1.5)</h2>
 
         <h3>Requirements</h3>
-        <div>This plugin requires Firefox with Firebug.</div>
+        <div>This plugin requires Firefox with Firebug (or Google Chrome/Firefox with Firebug Lite).</div>
 
         <h3>Get connected</h3>
-        <div>Download and install the corresponding browser plugin - <a href="/files/cssxfire.xpi">cssxfire.xpi</a> (1.4) - to connect Firebug CSS editor with the IDE plugin.</div>
-        <div>Firebug Lite users: <a href="javascript:void((function(){if(document.getElementById('css-x-fire'))return;var%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('src','http://localhost:6776/files/css-x-fire-bookmarklet.js');document.body.appendChild(e)})())">CSS-X-Fire</a> bookmarklet (drag and drop the link to the bookmarks toolbar).</div>
+        <div>Download and install the corresponding browser plugin - <a href="/files/cssxfire.xpi">cssxfire.xpi</a> (1.5) - to connect Firebug CSS editor with the IDE plugin.</div>
+        <div>&nbsp;</div>
+        <div>Firebug Lite users (<i>experimental</i>): <a href="javascript:void((function(){if(document.getElementById('css-x-fire'))return;var%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('src','http://localhost:6776/files/css-x-fire-bookmarklet.js');document.body.appendChild(e)})())">CSS-X-Fire</a> bookmarklet (drag and drop the link to the bookmarks toolbar).</div>
 
         <h3>Using</h3>
         <div>Use Firebug CSS editor to edit and add style properties.</div>
