Changelog: Reduce filter

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -22,6 +22,13 @@
             The IDE toolwindow shows the changes made in Firebug in a tree view, categorized by file and CSS selector, provided that the<br/>
             CSS selectors exist in the project opened. From here you can apply or discard changes on an entire file, selector or on a specific property.
         </div>
+        <div>&nbsp;</div>
+        <div>
+            <b>Reduce filter:</b> When checked, all incoming changes will be filtered down to one single target file instead of all matching selectors<br/>
+            in the project, if this file can be determined from the filename provided by Firebug.<br/>
+        </div>
+        <div>&nbsp;</div>
+
         <div><img src="/files/css-x-fire-2.png" alt="CSS property nodes" /></div>
         <div>&nbsp;</div>
         <div>
