--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -9,7 +9,7 @@
         <h3>Requirements</h3>
         <div>This plugin requires Firefox with Firebug.</div>
         <div>&nbsp;</div>
-        <div>Users of Google Chrome or Firefox with Firebug Lite, look <a href="lite.html">here</a>.</div>
+        <div><i>Users of Google Chrome or Firefox with Firebug Lite, look <a href="lite.html">here</a>.</i></div>
 
         <h3>Get connected</h3>
         <div>Download and install the corresponding browser plugin - <a href="/files/cssxfire.xpi">cssxfire.xpi</a> (1.8) - to connect Firebug CSS editor with the IDE plugin.</div>
@@ -23,11 +23,6 @@
             CSS selectors exist in the project opened. From here you can apply or discard changes on an entire file, selector or on a specific property.
         </div>
         <div>&nbsp;</div>
-        <div>
-            <b>Reduce filter:</b> When checked, all incoming changes will be filtered down to one single target file instead of all matching selectors<br/>
-            in the project, if this file can be determined from the filename provided by Firebug.<br/>
-        </div>
-        <div>&nbsp;</div>
 
         <div><img src="/files/css-x-fire-2.png" alt="CSS property nodes" /></div>
         <div>&nbsp;</div>
@@ -36,6 +31,14 @@
             double-click or press enter key on a valid property to show the corresponding source code.
         </div>
         <div><img src="/files/css-x-fire-4.png" alt="Jump-to-source" /></div>
+        <div>&nbsp;</div>
+        <div>
+            <b>Reduce filter:</b> When checked, all incoming changes will be filtered down to one single target file instead of all matching selectors<br/>
+            in the project, if this file can be determined from the filename provided by Firebug.<br/>
+        </div>
+        <div>&nbsp;</div>
+
+        <div><img src="/files/css-x-fire-3.png" alt="Reduce filter" /></div>
 
         <h3>About</h3>
         <div>
