Updated help page with media query filter

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -32,10 +32,14 @@
         </div>
         <div><img src="/files/css-x-fire-4.png" alt="Jump-to-source" /></div>
         <div>&nbsp;</div>
-        <div>
-            <b>Reduce filter:</b> When checked, all incoming changes will be filtered down to one single target file instead of all matching selectors<br/>
-            in the project, if this file can be determined from the filename provided by Firebug.<br/>
-        </div>
+            <div>
+                <b>Media query reduce filter:</b> When checked, all incoming changes will be filtered down to the selectors matching the media query.
+            </div>
+        <div>&nbsp;</div>
+            <div>
+                <b>Filename reduce filter:</b> When checked, all incoming changes will be filtered down to files with a given filename, if these files can be<br/>
+                determined from the filename provided by Firebug.<br/>
+            </div>
         <div>&nbsp;</div>
 
         <div><img src="/files/css-x-fire-3.png" alt="Reduce filter" /></div>
