Initial CSS for builtin html pages

--- a/resources/com/googlecode/cssxfire/www/lite.html
+++ b/resources/com/googlecode/cssxfire/www/lite.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>CSS-X-Fire (1.15) for Firebug Lite</title>
+        <link rel="stylesheet" href="/files/style.css" />
     </head>
 
     <body>
