--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>CSS-X-Fire (1.15)</title>
+        <link rel="stylesheet" href="/files/style.css" />
     </head>
 
     <body>
