--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -53,7 +53,7 @@
             effect when using route mappings (see below).
         </p>
         <p>
-            <b>Use routes:</b> When checked, each incoming change will be routed one single project file, based
+            <b>Use routes:</b> When checked, each incoming change will be routed to one single project file, based
             on the mappings table.
             <img class="screenshot" src="/files/css-x-fire-3.png" alt="Settings" />
         </p>
