Added Firebug icon

--- a/resources/com/googlecode/cssxfire/www/lite.html
+++ b/resources/com/googlecode/cssxfire/www/lite.html
@@ -13,7 +13,7 @@
             bookmarklet (drag and drop the link to the bookmarks toolbar).
         </p>
         <p>
-            First load <a href="http://getfirebug.com/firebuglite">Firebug Lite</a> into the page, then click on
+            First load <a href="http://getfirebug.com/firebuglite"><img src="/files/firebug16.png" alt="Firebug Lite">Firebug Lite</img></a> into the page, then click on
             the created bookmark for CSS-X-Fire to connect with the IDE.
         </p>
         <p>
