--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -56,6 +56,8 @@
             <b>Use routes:</b> When checked, each incoming change will be routed to one single project file, based
             on the mappings table.
             <img class="screenshot" src="/files/css-x-fire-3.png" alt="Settings" />
+            <b>Note: </b> These routes are only used by CSS-X-Fire. A route that ends with whitespace or does not start
+            with a forward slash will not be able to be added.
         </p>
 
         <h3>About</h3>
