Describe "reduce for currently opened files" in the help page.

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -48,6 +48,10 @@
             matching the media query.
         </p>
         <p>
+            <b>Currently opened files:</b> When checked, all incoming changes will be filtered down to the files
+            that are currently opened in the editor.
+        </p>
+        <p>
             <b>Match filename:</b> When checked, all incoming changes will be filtered down to files with a
             the given filename provided by Firebug, regardless of path. Note that this setting will have no
             effect when using route mappings (see below).
