--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -68,10 +68,20 @@
         <p>
             Plugin home: <a href="http://plugins.intellij.net/plugin/?idea&id=5348">http://plugins.intellij.net/plugin/?idea&id=5348</a>
             <br/>
-            Please use the above link to comment or rate this plugin, or for making a feature request. All feedback
-            is greatly appreciated!
+            Please use the above link to comment or rate this plugin. All feedback is greatly appreciated!
         </p>
-        <p>Project home: <a href="http://code.google.com/p/css-x-fire/">http://code.google.com/p/css-x-fire/</a></p>
+        <p>
+            Project home: <a href="http://code.google.com/p/css-x-fire/">http://code.google.com/p/css-x-fire/</a>
+            <br/>
+            Please report bugs and make feature requests here.
+        </p>
+        <p>
+            If you find CSS-X-Fire useful and want to say thank you, please consider making a small donation through Paypal.
+            <br/>
+            <a title="Donate" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=975RZQCCLGV6J" rel="nofollow">
+                <img alt="Donate" border="0" src="/files/btn_donate_LG.gif"/>
+            </a>
+        </p>
         <p>
             This help page can be accessed by clicking the help button in CSS-X-Fire toolwindow.
             <img class="screenshot" src="/files/css-x-fire-1.png" alt="help" />
