Added middle-click as navigate option

--- a/resources/com/googlecode/cssxfire/www/about.html
+++ b/resources/com/googlecode/cssxfire/www/about.html
@@ -30,7 +30,7 @@
         </p>
         <p>
             The property nodes - the tree leafs - will either be blue (modified), green (new) or gray (invalid). They
-            are also navigatable, e.g. double-click or press enter key on a valid property to jump to the corresponding
+            are also navigatable, e.g. middle-click, double-click or press enter key on a valid property to jump to the corresponding
             highlighted source code.
             <img class="screenshot" src="/files/css-x-fire-4.png" alt="Jump-to-source" />
         </p>
