Updated project home page.

--- a/resources/com/github/cssxfire/www/about.html
+++ b/resources/com/github/cssxfire/www/about.html
@@ -71,7 +71,7 @@
             Please use the above link to comment or rate this plugin. All feedback is greatly appreciated!
         </p>
         <p>
-            Project home: <a href="http://code.google.com/p/css-x-fire/">http://code.google.com/p/css-x-fire/</a>
+            Project home: <a href="https://github.com/ronniekk/css-x-fire">https://github.com/ronniekk/css-x-fire</a>
             <br/>
             Please report bugs and make feature requests here.
         </p>
